[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/multiplayer_setup_panel.gd" type="Script" id=1]
[ext_resource path="res://fonts/res/popup_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://icons/host_icon.svg" type="Texture" id=3]
[ext_resource path="res://icons/quit_icon.svg" type="Texture" id=4]

[node name="MultiplayerSetupPanel" type="PopupPanel"]
margin_right = 1100.0
margin_bottom = 600.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_right = 1072.0
margin_bottom = 592.0

[node name="PrimaryContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
margin_right = 1052.0
margin_bottom = 592.0
size_flags_vertical = 3

[node name="OptionContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/PrimaryContainer"]
margin_right = 419.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="HostIcon" type="TextureRect" parent="MarginContainer/MainContainer/PrimaryContainer/OptionContainer"]
visible = false
margin_top = 94.0
margin_right = 419.0
margin_bottom = 294.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="JoinIcon" type="TextureRect" parent="MarginContainer/MainContainer/PrimaryContainer/OptionContainer"]
visible = false
margin_top = 196.0
margin_right = 419.0
margin_bottom = 396.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="InfoLabel" type="Label" parent="MarginContainer/MainContainer/PrimaryContainer"]
margin_left = 423.0
margin_top = 281.0
margin_right = 1052.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 2 )
valign = 1
autowrap = true
